@@ -75,6 +75,11 @@
 # define snprintf _snprintf
 #endif
 
+/* Windows does not define ssize_t. */
+#ifndef HAVE_SSIZE_T
+typedef ptrdiff_t ssize_t;
+#endif
+
 /*
  * POSIX requires that these be defined in <unistd.h>.  If one of them has
  * been defined, all the rest almost certainly have.
