@@ -20,6 +20,12 @@ WebAuth 4.0.2 (unreleased)
     multifactor authentication on a WebAuth Application Server at
     Stanford.
 
+    Update to rra-c-util 3.11:
+
+    * Check for a missing ssize_t.
+    * Correctly remove -I/usr/include from Kerberos and GSS-API flags.
+    * Fix message utility library compiler warnings on 64-bit systems.
+
 WebAuth 4.0.1 (2011-09-23)
 
     The protocol for getting suspicious login information from the user
